feat(nix): Build Dockerfile from flake

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,14 @@
-image: "vlafeychine/rust"
+image: vlafeychine/rust
+
+variables:
+  CARGO_HOME: "$CI_PROJECT_DIR/.cache/cargo/"
+
+cache:
+  key:
+    files:
+      - Cargo.lock
+  paths:
+    - .cache/cargo/
 
 format:
   script:
