--- a/proost/Cargo.toml
+++ b/proost/Cargo.toml
@@ -7,3 +7,4 @@ license = "GPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rustyline = "10.0.0"
