--- a/proost/Cargo.toml
+++ b/proost/Cargo.toml
@@ -7,4 +7,6 @@ license = "GPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+core = { path = "../core" }
+parser = { path = "../parser" }
 rustyline = "10.0.0"
