--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "core"
+name = "parser"
 version = "0.1.0"
 edition = "2021"
 license = "GPL-3.0-or-later"
@@ -7,3 +7,7 @@ license = "GPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+core = { path = "../core" }
+pest = "2.0"
+pest_derive = "2.0"
+
