chore!(cargo): Rename  crate into

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -1,12 +1,7 @@
 [package]
-name = "parser"
+name = "kernel"
 version = "0.1.0"
 edition = "2021"
 license = "GPL-3.0-or-later"
 
 [dependencies]
-kernel = { path = "../kernel" }
-
-pest = "2.0"
-pest_derive = "2.0"
-
