chore(parser): Add derive_more

--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -7,6 +7,6 @@ license = "GPL-3.0-or-later"
 [dependencies]
 kernel = { path = "../kernel" }
 
+derive_more = "0.99.17"
 pest = "2.0"
 pest_derive = "2.0"
-
