--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ format:
 
 lint:
   script:
-    - cargo clippy -- -D warnings
+    - cargo clippy --all-targets --all-features -- -D warnings
 
 build:
   needs: [format, lint]
