--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ stages:
 
 variables:
   CARGO_HOME: "$CI_PROJECT_DIR/.cache/cargo/"
+  RUSTFLAGS: "-D warnings"
 
 cache:
   key: "$CI_JOB_STAGE-$CI_COMMIT_REF_SLUG"
@@ -15,7 +16,11 @@ cache:
     - .cache/cargo/
     - target/
 
+default:
+  interruptible: true
+
 format:
+  cache: []
   stage: check
   script:
     - cargo fmt --check
@@ -23,7 +28,7 @@ format:
 lint:
   stage: check
   script:
-    - cargo clippy --all-targets --all-features -- -D warnings
+    - cargo clippy --all-targets --all-features
 
 build:
   stage: build
@@ -40,8 +45,9 @@ tests:
 
   script:
     - cargo test
-    - grcov . -s . --binary-path ./target/debug/ -t cobertura --branch --ignore "*cargo*" --ignore-not-existing -o coverage.xml 
+    - grcov . -s . --binary-path ./target/debug/ -t cobertura --branch --ignore "*cargo*" --ignore-not-existing --excl-line "panic!" --excl-br-line "panic!" -o coverage.xml 
     - sed -n '3p' coverage.xml | grep -oE '[a-z-]+="[0-9](.[0-9]+)?"' | sed -r 's/(branch-rate|line-rate)="(0|(1)).([0-9]{2})([0-9]{2})[0-9]*"/\1="\3\4.\5%"/'
+    - find target -name "*.gcda" -name "*.gcno" -delete
 
   artifacts:
     reports:
