--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,14 +8,19 @@ stages:
 
 variables:
   CARGO_HOME: "$CI_PROJECT_DIR/.cache/cargo/"
+  RUSTFLAGS: "-D warnings"
 
 cache:
-  key: "$CI_JOB_STAGE-$CI_COMMIT_REF_SLUG"
+  key: "$CI_JOB_STAGE"
   paths:
     - .cache/cargo/
     - target/
 
+default:
+  interruptible: true
+
 format:
+  cache: []
   stage: check
   script:
     - cargo fmt --check
@@ -23,7 +28,7 @@ format:
 lint:
   stage: check
   script:
-    - cargo clippy --all-targets --all-features -- -D warnings
+    - cargo clippy --all-targets --all-features
 
 build:
   stage: build
@@ -34,14 +39,15 @@ tests:
   stage: tests
   variables:
     CARGO_INCREMENTAL: 0
-    LLVM_PROFILE_FILE: "coverage-%p-%m.profraw"
+    EXCLUDE_REGEXP: "unreachable!()|#\\["
     RUSTDOCFLAGS: "-Cpanic=abort"
     RUSTFLAGS: "-Zprofile -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests -Cpanic=abort"
 
   script:
     - cargo test
-    - grcov . -s . --binary-path ./target/debug/ -t cobertura --branch --ignore "*cargo*" --ignore-not-existing -o coverage.xml 
+    - grcov . -s . --binary-path ./target/debug/ -t cobertura --branch --ignore "*cargo*" --ignore-not-existing --excl-line ${EXCLUDE_REGEXP} --excl-br-line ${EXCLUDE_REGEXP} -o coverage.xml 
     - sed -n '3p' coverage.xml | grep -oE '[a-z-]+="[0-9](.[0-9]+)?"' | sed -r 's/(branch-rate|line-rate)="(0|(1)).([0-9]{2})([0-9]{2})[0-9]*"/\1="\3\4.\5%"/'
+    - find target \( -name "*.gcda" -or -name "*.gcno" \) -delete
 
   artifacts:
     reports:
