--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,13 +39,13 @@ tests:
   stage: tests
   variables:
     CARGO_INCREMENTAL: 0
-    EXCLUDE_REGEXP: "unreachable!()|#\\["
+    EXCLUDE_REGEXP: "//!|///|#\\[|unreachable!()|use"
     RUSTDOCFLAGS: "-Cpanic=abort"
     RUSTFLAGS: "-Zprofile -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests -Cpanic=abort"
 
   script:
     - cargo test
-    - grcov . -s . --binary-path ./target/debug/ -t cobertura --branch --ignore "*cargo*" --ignore-not-existing --excl-line ${EXCLUDE_REGEXP} --excl-br-line ${EXCLUDE_REGEXP} -o coverage.xml 
+    - grcov . -s . --binary-path ./target/debug/ -t cobertura --branch --ignore "*cargo*" --ignore-not-existing --excl-line ${EXCLUDE_REGEXP} --excl-br-line ${EXCLUDE_REGEXP} -o coverage.xml
     - sed -n '3p' coverage.xml | grep -oE '[a-z-]+="[0-9](.[0-9]+)?"' | sed -r 's/(branch-rate|line-rate)="(0|(1)).([0-9]{2})([0-9]{2})[0-9]*"/\1="\3\4.\5%"/'
     - find target \( -name "*.gcda" -or -name "*.gcno" \) -delete
 
