--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,9 +39,10 @@ tests:
   stage: tests
   variables:
     CARGO_INCREMENTAL: 0
-    EXCLUDE_BR_REGEXP: "#\\[|unreachable!|assert(_eq)?!"
-    EXCLUDE_REGEXP: "//!|///|#\\[|use"
-    GRCOV: "grcov . -s . -b ./target/debug/ --branch --ignore-not-existing --excl-line ${EXCLUDE_REGEXP} --excl-br-line ${EXCLUDE_BR_REGEXP}"
+    EXCL_LINE: "//!|///|#\\[|use"
+    EXCL_BR_LINE: "#\\[|unreachable!|assert(_eq)?!|^(pub |pub(crate) )?(enum|struct)|^[[:space:]]*\\}(,)?$"
+    EXCL_BR_START: "^(pub |pub(crate) )?(enum|struct) [[:alpha:]]+ \\{"
+    EXCL_BR_STOP: "^\\}"
     RUSTDOCFLAGS: "${RUSTFLAGS}"
     RUSTFLAGS: "-Zprofile -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests -Cpanic=abort"
     ZAMOK_SOURCE: coverage
@@ -53,9 +54,9 @@ tests:
 
   script:
     - cargo test
-    - ${GRCOV} --ignore "*cargo*" -t cobertura -o ./coverage_raw.xml &&
+    - grcov . -s . -b ./target/debug/ --branch --ignore-not-existing --excl-line "${EXCL_LINE}" --excl-br-line "${EXCL_BR_LINE}" --excl-br-start "${EXCL_BR_START}" --excl-br-stop "${EXCL_BR_STOP}" --ignore "*cargo*" -t cobertura -o ./coverage_raw.xml &&
         xsltproc --novalid --output ./coverage.xml ./.gitlab-cov.xsl ./coverage_raw.xml || true
-    - ${GRCOV} --ignore "*cargo*" -t lcov -o ./coverage.lcov &&
+    - grcov . -s . -b ./target/debug/ --branch --ignore-not-existing --excl-line "${EXCL_LINE}" --excl-br-line "${EXCL_BR_LINE}" --excl-br-start "${EXCL_BR_START}" --excl-br-stop "${EXCL_BR_STOP}" --ignore "*cargo*" -t lcov -o ./coverage.lcov &&
         genhtml --branch --no-function-coverage --precision 2 ./coverage.lcov -o ./coverage || true
     - *push-zamok
 
