--- a/proost/Cargo.toml
+++ b/proost/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 license.workspace = true
 repository.workspace = true
 version.workspace = true
+default-run = "proost"
 
 [dependencies]
 kernel.path = "../kernel"
