--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "kernel"
-version = "0.1.0"
 edition = "2021"
-license = "GPL-3.0-or-later"
+version = "0.1.0"
+authors.workspace = true
+license.workspace = true
 
 [dependencies]
-derive_more = "0.99.17"
-num-bigint = "0.4"
+derive_more.workspace = true
+num-bigint.workspace = true
