fix(cargo): Use workspace for tilleul

--- a/tilleul/Cargo.toml
+++ b/tilleul/Cargo.toml
@@ -1,20 +1,22 @@
 [package]
 name = "tilleul"
-version = "0.1.0"
-edition = "2021"
-license = "GPL-3.0-or-later"
 description = "A LSP server for the simple proof assistant Proost"
+edition = "2021"
+version = "0.1.0"
+authors.workspace = true
+license.workspace = true
 
 [dependencies]
 parser.path = "../parser"
 kernel.path = "../kernel"
 
-anyhow = "1.0.66"
+anyhow.workspace = true
+derive_more.workspace = true
+
 crossbeam-channel = "0.5.6"
-clap = { version = "4.0.10", features = ["derive"] }
-derive_more = "0.99.17"
 env_logger = "0.9.1"
+lazy_static = "1.4.0"
 log = "0.4.17"
+lsp-types = "0.93.2"
 serde = "1.0.147"
 serde_json = "1.0.87"
-lsp-types = "0.93.2"
