fix(terms and type checker): use deref trait, further temporary changes in type checker, removing previous environment definition; early: won't compile

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,17 @@ members = [
 
 [workspace.dependencies]
 anyhow = "1.0"
+bumpalo = "3.11.1"
 clap = { version = "4.0.10", features = ["derive"] }
 derive_more = "0.99.17"
+im-rc = "15.1.0"
 num-bigint = "0.4"
 
 [workspace.package]
 authors = [
     "Arthur Adjedj",
     "Augustin Albert",
-    "Lucas Tabary-Maujean",
-    "Vincent Lafeychine"
+    "Vincent Lafeychine",
+    "Lucas Tabary-Maujean"
 ]
 license = "GPL-3.0-or-later"
