feat(lsp): Early request dispatcher

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ members = [
 ]
 
 [workspace.dependencies]
+anyhow = "1.0.66"
+bumpalo = "3.11.1"
 clap = { version = "4.0.10", features = ["derive"] }
 derive_more = "0.99.17"
 
