--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -8,6 +8,7 @@ license.workspace = true
 [dependencies]
 kernel.path = "../kernel"
 
+anyhow.workspace = true
 derive_more.workspace = true
 num-bigint.workspace = true
 
