check if terminal and add option for syntax coloring

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ anyhow = "1.0"
 clap = { version = "4.0.10", features = ["derive"] }
 derive_more = "0.99.17"
 num-bigint = "0.4"
+atty = "0.2"
+colored = "2"
+rustyline = "10.0.0"
+rustyline-derive = "0.7.0"
 
 [workspace.package]
 authors = [
