Resolve "Refactor memory model of type checker" ✨️ Closes #15 🐔️👍️ Approved-by: aalbert <augustin.albert@bleu-azure.fr> Approved-by: v-lafeychine <vincent.lafeychine@proton.me> Approved-by: belazy <aarthuur01@gmail.com>
🦀️🍰🦀️🍰🦀️🍰

* chore(cargo): update

* fix(from comments): second pass of small review changes

* Apply 1 suggestion(s) to 1 file(s)

* fix(kernel review): take Vincent comments into account

* chore(cargo): update cargo.lock

* fix(kernel tests): adapt to new builder structure

* fix(proost): adapt proost toplevel to the new memory model.
This includes a temporary solution for error management, which will be changed anyway.

* fix(parser): adapt tests to memory model

* fix(kernel): refactor build functions location

* fix(parser): adapt parser to new model WIP

* feat(builders): WIP rewriting builders

* chore(file structure): reorganised the file structure of arena- or term-related functions

* chore(terms): changing some annotations in the file

* fix(tests): all tests now succeed. Errors were due to the rewriting of the tests, not the type checker

* fix(terms): chose to modify Debug impl of Terms instead; which gives better, less verbose results

* fix(terms): add wrapper around OnceCell in order to fix their Debug trait implementation (too enthusiastic by default)

* fix(kernel): fix term generation error with depth, fix wrong imax computation in type inference, fix PartialEq impl for Node

* fix(kernel tests): rewrite the and test

* fix(commands): update commands and the associated other functions

* fix(type checker): add necessary lifetime annotations on result

* fix(kernel tests): refactor tests accordingly

* feat(type checker): adapt type checking and errors to the memory model

* fix(terms and type checker): use deref trait, further temporary changes in type checker, removing previous environment definition; early: won't compile

* fix(terms): adapt all core functions from terms.rs; early: won't compile

* fix(terms): fix lifetime issue

--- a/proost/Cargo.toml
+++ b/proost/Cargo.toml
@@ -10,9 +10,9 @@ license.workspace = true
 kernel.path = "../kernel"
 parser.path = "../parser"
 
-anyhow.workspace = true
-clap.workspace = true
 atty.workspace = true
+clap.workspace = true
 colored.workspace = true
-rustyline.workspace = true
+derive_more.workspace = true
 rustyline-derive.workspace = true
+rustyline.workspace = true
