--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -6,7 +6,9 @@ authors.workspace = true
 license.workspace = true
 
 [dependencies]
+bumpalo.workspace = true
 derive_more.workspace = true
+im-rc.workspace = true
 num-bigint.workspace = true
 
 [dev-dependencies]
