--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,14 @@ colored = "2"
 derive_more = "0.99.17"
 im-rc = "15.1.0"
 num-bigint = "0.4"
+path-absolutize = "3.0.14"
 pest = "2.4"
+pest = "2.5"
 pest_derive = "2.4"
+pest_derive = "2.5"
 rustyline = "10.0.0"
 rustyline-derive = "0.7.0"
-path-absolutize = "3.0.14"
+unicode-width = "0.1.10"
 
 [workspace.package]
 authors = [
