--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "kernel"
-edition = "2021"
-version = "0.1.0"
+edition.workspace = true
+version.workspace = true 
 authors.workspace = true
 license.workspace = true
 
