--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "parser"
-edition = "2021"
-version = "0.1.0"
+edition.workspace = true
+version.workspace = true
 authors.workspace = true
 license.workspace = true
 
@@ -10,6 +10,5 @@ kernel.path = "../kernel"
 
 derive_more.workspace = true
 num-bigint.workspace = true
-
-pest = "2.4"
-pest_derive = "2.4"
+pest.workspace = true
+pest_derive.workspace = true
