--- a/proost/Cargo.toml
+++ b/proost/Cargo.toml
@@ -14,5 +14,6 @@ atty.workspace = true
 clap.workspace = true
 colored.workspace = true
 derive_more.workspace = true
+path-absolutize.workspace = true
 rustyline-derive.workspace = true
 rustyline.workspace = true
