--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
 name = "parser"
-edition.workspace = true
-version.workspace = true
+
 authors.workspace = true
+edition.workspace = true
 license.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [dependencies]
 kernel.path = "../kernel"
 
 derive_more.workspace = true
-pest.workspace = true
-pest_derive.workspace = true
+
+pest = "2.5"
+pest_derive = "2.5"
