--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "kernel"
-edition.workspace = true
-version.workspace = true 
+
 authors.workspace = true
+edition.workspace = true
 license.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [dependencies]
-bumpalo.workspace = true
 derive_more.workspace = true
-im-rc.workspace = true
 
-[dev-dependencies]
-lazy_static = "1.4.0"
+bumpalo = "3.11.1"
+im-rc = "15.1.0"
