feat(clippy): Enable clippy lints

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,10 @@ format:
 
 lint:
   stage: check
+  variables:
+    RUSTFLAGS: ""
   script:
-    - cargo clippy --all-targets --all-features
+    - cargo clippy --all-targets --all-features --no-deps
 
 build:
   stage: build
