chore(utils): Move Errors + Location + Trace into utils crate

--- a/proost/Cargo.toml
+++ b/proost/Cargo.toml
@@ -11,6 +11,7 @@ version.workspace = true
 [dependencies]
 kernel.path = "../kernel"
 parser.path = "../parser"
+utils.path = "../utils"
 
 clap.workspace = true
 derive_more.workspace = true
