--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "kernel"
+name = "utils"
 
 authors.workspace = true
 edition.workspace = true
@@ -8,9 +8,4 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
-utils.path = "../utils"
-
 derive_more.workspace = true
-
-bumpalo = "3.11.1"
-im-rc = "15.1.0"
