Resolve "LSP: Proof-of-concept" ✨️ Closes #20 🐔️👍️ Approved-by: aalbert <augustin.albert@bleu-azure.fr> Approved-by: belazy <aarthuur01@gmail.com> Approved-by: loutr <loutr@crans.org>
🦀️🍰🦀️🍰🦀️🍰

* chore(tilleul): fix typos in documentation

* chore(tilleul): Add axioms

* chore(tilleul): Add global server tests on unexpected queries

* chore(tilleul): Add UTF-8 message test

* chore(tilleul): Add connection tests

* chore(tilleul): Add message write/read test

* chore(tilleul): Add dispatcher tests

* fix(tilleul): Documentation

* feat(editors): Add emacs integration

* feat(tilleul): Add server mock

* chore(coverage): Ignore log functions

* feat(tilleul): Transform Connection into a trait

* feat(tilleul): Add complete LSP lifecycle

* chore(tilleul): Rename backend crate to lsp and payload crate to message, madedocumentation and fix clippy issues

* chore(tilleul): Rename server crate in backend, made a directory for tilleul

* feat(tilleul): Add WaitingForInitialisation + Initialised states

* chore(tilleul): Fix moved dependencies

* feat(lsp): Add early parsing from tilleul

* feat(lsp): Add notification dispatcher + Improve request dispatcher

* refactor(lsp): Add LanguageServerBackend

* chore(lsp): Remove LSP states

* chore(lsp): Improve request handling

* feat(lsp): Early request dispatcher

* feat(lsp): Add early message handling + Rename message into payload

* fix(cargo): Use workspace for tilleul

* fix(cargo): Use workspace for tilleul

* feat(lsp): Add early LSP stages

* feat(lsp): Add exit notification

* feat(lsp): Threads + Early IO server

* feat(lsp): Initial commit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,13 @@ members = [
     "kernel",
     "parser",
     "proost",
+    "tilleul",
     "utils"
 ]
 
 [workspace.dependencies]
+anyhow = "1.0.66"
+bumpalo = "3.11.1"
 clap = { version = "4.0.10", features = ["derive"] }
 derive_more = "0.99.17"
 
