chore: rename crate utils -> elaboration

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -8,7 +8,7 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
-utils.path = "../utils"
+elaboration.path = "../elaboration"
 
 derive_more.workspace = true
 
