--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -9,7 +9,7 @@ version.workspace = true
 
 [dependencies]
 kernel.path = "../kernel"
-utils.path = "../utils"
+elaboration.path = "../elaboration"
 
 derive_more.workspace = true
 
