Resolve "Preparation for Release v0.2.0" ✨️ Closes #86 🐔️👍️ Approved-by: belazy <aarthuur01@gmail.com> Approved-by: aalbert <augustin.albert@bleu-azure.fr> Approved-by: v-lafeychine <vincent.lafeychine@proton.me>
🦀️🍰🦀️🍰🦀️🍰

* Apply 1 suggestion(s) to 1 file(s)

* chore: update README and parser dependency

* chore(parser, proost): adapt other crates to use new crate elaboration

* feat(elaboration): implement builders in elaboration crate

* fix: remove elaboration dependency in kernel; consequently add VecBuilderTrait

* chore: rename crate utils -> elaboration

* fix(cargo): Better use of SemVer for dependencies

* feat(kernel): Add Buildable trait

* chore(kernel): Rename 'as_buildertrait' as 'as_closure'

* feat(kernel): Remove useless Builder's realise_in_context

* feat(trace): Allow custom T return type on Traceable trait

* docs: fix typos in kernel documentation

* chore: update description of tilleuil crate

* chore: remove useless variable in gitlab-ci.yml

* chore: updating cargo version of the project

--- a/elaboration/Cargo.toml
+++ b/elaboration/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "utils"
+name = "elaboration"
 
 authors.workspace = true
 edition.workspace = true
@@ -8,4 +8,5 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
+kernel.path = "../kernel"
 derive_more.workspace = true
