--- a/proost/Cargo.toml
+++ b/proost/Cargo.toml
@@ -12,13 +12,13 @@ default-run = "proost"
 [dependencies]
 kernel.path = "../kernel"
 parser.path = "../parser"
-utils.path = "../utils"
+elaboration.path = "../elaboration"
 
 clap.workspace = true
 derive_more.workspace = true
 
 atty = "0.2"
 colored = "2"
-path-absolutize = "3.0.14"
-rustyline = "10.0.0"
-rustyline-derive = "0.7.0"
+path-absolutize = "3"
+rustyline = "10"
+rustyline-derive = "0.7"
